<resources>
    <string name="app_name">Daniel Melaku App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="nanodegree_app_header">My Nanodegree Apps!</string>
    <string name="toastMsg">This button will launch my</string>
    <string name="button_1">Spotify Streamer</string>
    <string name="button_2">Scores App</string>
    <string name="button_3">Library App</string>
    <string name="button_4">Build it bigger</string>
    <string name="button_5">XYZ reader</string>
    <string name="button_6">CAPSTONE:My own app</string>
</resources>
